added user endpoint and refactoring
